@@ -1,3 +1,6 @@
+Tue, 11 Apr 2006 18:53:00 +0200 <thp@perli.net>
+	* Make directories recursively, more efficient (in libgpodder)
+
 Mon, 10 Apr 2006 18:44:48 +0200 <thp@perli.net>
 	* Added "Released" column to available podcasts list
 
